--- a/style.css
+++ b/style.css
@@ -31,8 +31,9 @@
     display: grid;
     grid-area: li;
     grid-template-columns: repeat(9, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     grid-gap: 4rem;
+    padding-right: 40px;
 }
 
 #footer{
